# anvil-notify

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrate  Dockerfile.outbox  Dockerfile.outbox.dev  README.md  anvil-notify.yaml  docker-compose.yml  opencode.json  todo.md
.cargo/: audit.toml
.devcontainer/: Dockerfile
.githooks/: pre-commit
.sqlx/: query-0213b5c8c7c9dca2754e8e384cdc44e25272a489d4f1fcc31d0f6b705ff1fe47.json  query-02293ab14a21b058f644b2013d551a69ecd45cb4dd29ddbb837170567ba68d64.json  query-0c54b08370404e141674dd7fe83831261e9c024fdd2aa9827286cb02d3541b29.json  query-0e6e053cb117325d424c8de1c23d251bcaed5dd47da0564fc746c9df9f3d71c9.json  query-1721b1f27618ba7188df1db8cd4d9d550c0857dc77116d41bbc760288504d8ff.json  query-19a83bd9be27b0c89f51db992834d3d1d6175d2cead21035a40b95f1a18677bc.json  query-2f9dc3f3591109e1214fe7a35a4952595fe8b50907bcae07e62aeb1a1ccf20aa.json  query-328d545f11e3c3fefbb2bf1da53c052c2afb5323310e507a15ff784b2c8a6615.json  query-3321323a09e4614a126dd1a16f178ba8ebf249981cd3ad16eb2676093dffd91c.json  query-33cd7b1a03dd1547f78ca1c424857640e24f82b9065a8183a164dcf5a3654332.json  query-35bed827a2d91925691d58cc96642fdd5dd528402100432a22ce67f510fdb5f4.json  query-36c84dd88757a47208f3313e9e84f697e2393d1fa62dc5a991c9ad57a3bd614b.json  query-39d8c08fde34cf02f76bf00345455a38e0df5d31264501644ef7e0114f7301b8.json  query-3c57229032ce91655e61a1e8c1bbe8448763f1a5112b85541c2500990da60663.json  query-47dc2849dba2e1b24c3417e2056279693499dfc2426799538d2a69f0c2b975e3.json  query-5343e32f884cdeebccf20d0b262faeb8c046288deae8905f69d981a7cc830659.json  query-59daebe6f3ef522babe8e8dfb5e3447275294b2d8ec1cfd114644956ee242172.json  query-5bc28016c065e965c6a88f331bcf93c42ab9902db069c0967611b9c80377442c.json  query-5c7b29876aa371fe2382511077394aedaa9a6e31f4cc6435ee2176377a752c0e.json  query-5d47b61ab7c517ceb7d93f479c69f75bd47a31d1d12f66e26b429e6ceead8765.json  query-689eeff3a46559e375e36c956da67ff6c60733535352b8feecbb2a4d658b87e1.json  query-6f3b416bd3d696005f3fa56c7a74870d644d2f04108c47688210aa9a05d4fc8e.json  query-735d490f92d6664b712ff322f1050ed4c457c12cbb5c7552f2f3a32d786b4dbf.json  query-7b0c91d0920d4f59853915b559adb44ba4336ce4b0f24d9b978861da0bf9553c.json  query-7ef2090e2a3e345ee5f5e9f801863b24db06f6d5002c11fce86ba08132e03d45.json  query-909ee5f3cfc42d916c01a38c314db03c854279c9141cbfb531a2737d32f2678b.json  query-90ee86143283d703537dc4415b1f46ca172aa0462d89ff8cef4edbab4b31cece.json  query-920b09241e4564951aac10f0c469c8592c5c213bcf6d247433a1a3ab91d01aa3.json  query-976ac9732e57b91c1e879137f0a7c2b4380bf714a5d48718779a534c6d30a44d.json  query-9e13d7cbd438f20e501da3409ef76ed8b3154a9cc664b87471862d5cb212daa6.json  query-a5b0bd0e9565543cc6d73280c0c12ec422ddbed39c713267cd9c3e2f81250585.json  query-a9ab86f2a25d3cff88f4b3ad560d05ccb34004c9e466e9e1e5e88c9a92bef60d.json  query-b41b3209bb150aff8381d2bdb216572d6d36c2ce83b0e4a2626d102d0d72c2bf.json  query-bbb01a55b76f2c5ea1d274d8ccdfee6be95119a661d52fe2a2e9eced53f39304.json  query-c13da39460c4cd71c1ccf4768c63e39aecb0832752ad7f205b96a75485a58f04.json  query-c20d805b2634989aae28b068d6a44735b054b33d7c14282e7b287616cfb99df8.json  query-c6c352191f42178636356e1ab71f62d1d9168027bdf3c0f3119fe896fc65de54.json  query-cb2855ffe036eb2a59265a956afe60fa1919cf825d4017e81d933ceaa0e78720.json  query-cc96511a120a9629dd2a2872621247da5fd9c9b17c89b2c7c3fb0c760833ed23.json  query-d424474c0eea6e8192162f86a4229280cb22331d8ad5ec8a04a4a696fda348b2.json  (+12 more)
config/: default.toml  local.toml
crates/mcp/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: config.rs  lib.rs  main.rs
crates/mcp/src/: config.rs  main.rs  server.rs
crates/store/: Cargo.toml
crates/store/src/: block_list_store.rs  email_log.rs  lib.rs  notification_log.rs  template_store.rs
deploy/: migrate.sh
migrations/: 0001_initial_schema.sql  (+8 more)
(+47 files in other folders)
