[package]
name = "anvil-notify-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anvil-notify-mcp"
path = "src/main.rs"

[dependencies]
common  = { path = "../common" }
store   = { path = "../store" }

rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }

tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
schemars     = "1"
uuid         = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }

lapin        = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
config = "0.14"

axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
