[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true, features = ["sync"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }

async-trait = { workspace = true }
moka  = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

[dev-dependencies]
# `sqlx::test` spins up a temporary Postgres database per test function,
# runs the crate's migrations, and tears it all down afterwards.
# DATABASE_URL must point to a Postgres instance when running these tests.
sqlx  = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid  = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
chrono = { workspace = true }